@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_1.tex,v 1.106 2009-02-05 20:30:45 guru Exp $
+%	$Id: GMT_Chapter_1.tex,v 1.107 2009-02-05 21:54:42 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2009.
@@ -184,7 +184,8 @@ Here is a list of the recent enhancement to various programs:
 	custom switches directly to \progname{ghostscript}, and \Opt{Q}[{\bf g}$|${\bf t}]{\it bits} to
 	set the level of anti-aliasing for graphics and text, respectively.  We also added a new
 	option \Opt{F} to force a specified output file name.  Finally, added \Opt{W} to help create world files
-	and geotiff output.
+	and geotiff output.  To simplify boundary annotations for such plots (which must be inside the map region)
+	we added the new choice {\if inside} for the {\bf BASEMAP\_TYPE} default parameter.
 \item \GMTprog{psxy.c} has new option \Opt{I}{\it intens} to modulate fill color via a fixed illumination value.
 \item \GMTprog{psxyz.c} has the same new option \Opt{I}{\it intens}.
 \item \GMTprog{xyz2grd.c} has new format ({\bf A}) for \Opt{Z} which allows more than one floating
